<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE RelativeLayout>
<project xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.5</version>
		<relativePath />
	</parent>

	<groupId>com.github.justincranford.springs</groupId>
	<artifactId>springs-pom</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<name>Spring Applications</name>
	<description>Spring Boot Applications</description>
	<packaging>pom</packaging>

	<url>https://github.com/justincranford/springs</url>

	<inceptionYear>2012</inceptionYear>
	<organization>
		<name>Justin Cranford</name>
		<url>https://github.com/justincranford/springs</url>
	</organization>

	<licenses>
		<license>
			<name>GNU AFFERO GENERAL PUBLIC LICENSE 3.0</name>
			<url>https://www.gnu.org/licenses/agpl-3.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Justin Cranford</name>
			<email>justincranford@hotmail.com</email>
			<organization>Justin Cranford</organization>
			<organizationUrl>https://github.com/justincranford</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:https://github.com/justincranford/springs.git</connection>
		<developerConnection>scm:https://github.com/justincranford/springs.git</developerConnection>
		<url>scm:https://github.com/justincranford/springs</url>
	</scm>

	<modules>
		<module>springs-util-basic</module>
		<module>springs-util-json</module>
		<module>springs-util-observability</module>
		<module>springs-util-http</module>
		<module>springs-util-https</module>
		<module>springs-util-testcontainers</module>
		<module>springs-util-security-hashes</module>
		<module>springs-util-security-passwords</module>
		<module>springs-persistence-orm-base</module>
		<module>springs-persistence-orm-example</module>
		<module>springs-persistence-orm-users</module>
		<module>springs-persistence-orm-clients</module>
		<module>springs-authentication-orm-users</module>
		<module>springs-service-webauthn</module>
		<module>springs-service-chatbot</module>
		<module>springs-service-ollama</module>
	</modules>

	<properties>
		<java.version>21</java.version>
	</properties>

	<repositories>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<!--
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
		-->
	</repositories>

	<dependencyManagement>
		<dependencies>
			<!-- BOMS -->

			<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-bom -->
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-bom</artifactId>
				<version>2.24.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson/jackson-bom -->
			<dependency>
			    <groupId>com.fasterxml.jackson</groupId>
			    <artifactId>jackson-bom</artifactId>
			    <version>2.18.1</version>
			    <type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.testcontainers/testcontainers -->
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-bom</artifactId>
				<version>1.20.3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-dependencies-bom -->
			<dependency>
				<groupId>org.seleniumhq.selenium</groupId>
				<artifactId>selenium-dependencies-bom</artifactId>
				<version>4.26.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.yubico</groupId>
				<artifactId>webauthn-server-parent</artifactId>
			    <version>2.5.3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.yubico/webauthn-server-core -->
			<dependency>
			    <groupId>com.yubico</groupId>
			    <artifactId>webauthn-server-core</artifactId>
			    <version>2.5.3</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.ai</groupId>
				<artifactId>spring-ai-bom</artifactId>
				<version>1.0.0-M2</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>com.github.dasniko</groupId>
				<artifactId>testcontainers-keycloak</artifactId>
				<version>3.5.1</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-debug-jdk18on -->
			<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-debug-jdk18on -->
			<!-- https://mvnrepository.com/artifact/org.bouncycastle/bctls-debug-jdk18on -->
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcprov-debug-jdk18on</artifactId>
				<version>1.79</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcpkix-debug-jdk18on</artifactId>
				<version>1.79</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bctls-debug-jdk18on</artifactId>
				<version>1.79</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>33.3.1-jre</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/com.bucket4j/bucket4j-core -->
			<dependency>
				<groupId>com.bucket4j</groupId>
				<artifactId>bucket4j-core</artifactId>
				<version>8.10.1</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.htmlunit/htmlunit -->
			<dependency>
				<groupId>org.htmlunit</groupId>
				<artifactId>htmlunit</artifactId>
				<version>4.6.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<skip>true</skip>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<configuration>
					<allowSnapshots>false</allowSnapshots>
					<ruleSet>
						<ignoreVersions>
  							<ignoreVersion>
  								<type>regex</type>
  								<version>.+(-|\.)(dev|Dev|alpha|Alpha|beta|Beta|rc|RC|cr|CR|preview|Preview|mr|MR|m\d+|M\d+|nf-execution).*</version>
							</ignoreVersion>
						</ignoreVersions>
					</ruleSet>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.9.9</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
  		</plugins>
	</build>
</project>
